infrastructure/base/reflector/reflector.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reflector
  labels:
    networking.tinyrack.net/isolation: enabled
